# sanba-dev

./: .gitignore  Cargo.toml  README.md  Rocket.toml
api/: Cargo.toml
api/src/: booking_handlers.rs  club_handlers.rs  game_handlers.rs  lib.rs  person_handlers.rs  recorded_data_handlers.rs  recording_session_handlers.rs  team_handlers.rs  training_handlers.rs  user_handlers.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/authentication/: mod.rs  password.rs
application/src/authorization/: booking_checks.rs  mod.rs  person_checks.rs  team_checks.rs  user_checks.rs
application/src/db_entities/: mod.rs
application/src/db_entities/booking/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/db_entities/booking/game/: create.rs  delete.rs  mod.rs  read.rs  update.rs
application/src/db_entities/booking/game/formation/: create.rs  delete.rs  mod.rs  read.rs
application/src/db_entities/booking/training/: create.rs  delete.rs  read.rs  update.rs
application/src/db_entities/camera/: read.rs
application/src/db_entities/club/: create.rs  delete.rs  read.rs  update.rs
application/src/db_entities/person/: create.rs  delete.rs  read.rs  update.rs
application/src/db_entities/recording_session/: create.rs  delete.rs  read.rs  update.rs
application/src/db_entities/team/: create.rs  delete.rs  read.rs  update.rs
application/src/db_entities/user/: create.rs  delete.rs  login.rs  mod.rs  read.rs  update.rs
application/src/player/: player.rs
domain/: Cargo.toml
domain/src/: schema.rs
domain/src/models/: full_tables.rs  insertions.rs  mod.rs  others.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  response_models.rs  validation.rs
src/: main.rs
static/: index.html
(+5 files in other folders)
