[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.2.4", features = ["mysql", "chrono"] }
rocket = "0.5.1"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
log = "0.4.22"
validator = { version = "0.19", features = ["derive"] }