[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

rocket = "0.5.1"
diesel = { version = "2.2.4", features = ["mysql", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
utoipa = { version = "5.1.1", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["rocket"] }
validator = { version = "0.19", features = ["derive"] }